Merge TreeSitterAnalyzer Maps (#1231)
* Merged maps with shared `CodeUnits` into a map to `CodeUnitProperties`. A similar task was performed for `ProjectFile`.
* Created accessor methods to more easily get a property for a given key, e.g., `childrenOf(CodeUnit)` or `topLevelCodeUnitsOf(ProjectFile)`
* Removed some unused functions, made usages of accessors more consistent, deduplicated some logic

The result is that we have 1 parse tree cache map, 1 symbol index map, and 2 maps for code unit properties and project file properties.